# geop

./: Cargo.toml
examples/: off.rs  off_corner_table.rs  off_directed_edge.rs  off_half_edge.rs  off_lapl_corner_table.rs  off_lapl_half_edge.rs  off_shared_vertex.rs
src/: ds.rs  io.rs  lib.rs  op.rs  operator.rs  utils.rs
