[package]
name = "geop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baby_shark = { git = "https://github.com/dima634/baby_shark.git" }
off-rs = "1.0.0"
nalgebra = "0.32.3"
num-traits = "0.2.19"
lox = "0.1.1"

[toolchain]
channel = "nightly"
